--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "@loopback/rest-explorer": "^6.1.1",
     "@loopback/security": "^0.10.1",
     "@loopback/service-proxy": "^6.1.1",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "isemail": "^3.2.0",
     "loopback-connector-mongodb": "^5.6.0",
+    "loopback-connector-rest": "^4.0.3",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
